recursion.logo.lessons.recursion.logo.koch.SquareKoch.scala.error
SquareKoch:23: error: not found: value square
    square(levels-1, length/3);
    ^